# face_toolkit

./: ModuleGate.cmake
RenderingTemplate/: EigenHelper.h  bg_renderer.cpp  bg_renderer.hpp  camera.cpp  camera.hpp  f2f_optimizer.cpp  f2f_optimizer.h  f2f_renderer.cpp  f2f_renderer.hpp  face_2dtracker.cc  face_2dtracker.h  face_gradient.cpp  face_gradient.h  face_model.cpp  face_model.hpp  face_module.cpp  face_module.hpp  fps.hpp  framebuffer.cpp  framebuffer.hpp  gl_core.cpp  gl_core.hpp  gl_mesh.cpp  gl_mesh.hpp  gl_utils.h  gui.cpp  gui.hpp  main.cpp  mesh_renderer.cpp  mesh_renderer.hpp  minitrace.h  obj_loader.hpp  p2d_optimizer.cpp  p2d_optimizer.h  p3d_renderer.cpp  p3d_renderer.hpp  renderer.cpp  renderer.hpp  sh_optimizer.hpp  trackball.cpp  (+1 more)
RenderingTemplate.xcodeproj/: project.pbxproj
RenderingTemplate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RenderingTemplate/NPD/: TrainDetector.cc  TrainDetector.h
RenderingTemplate/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp
application/example/: CMakeLists.txt  build.sh  createXcode.command
application/face-view/: CMakeLists.txt  build.sh  createXcode.command  p2d.ini  run.sh
application/face-view/src/: CMakeLists.txt  gui.cpp  gui.h  gui_batch_f2f.cpp  gui_batch_f2f.h  gui_batch_render.cpp  gui_batch_render.h  hair_opt.cpp  main.cpp  prt_test.cpp
application/geo_app/: CMakeLists.txt  build.sh  createXcode.command
application/geo_app/src/: CMakeLists.txt  calc_thickness.cpp  prt_test.cpp
application/mp_demo/: CMakeLists.txt  createXcode.command  f2f.ini  imgui.ini
application/prt_test/: CMakeLists.txt  createXcode.command
application/prt_test/src/: CMakeLists.txt  prt_test.cpp
face_toolkit.xcodeproj/: project.pbxproj
face_toolkit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
facelib/f2f/: CMakeLists.txt  f2f_optimizer.cpp  f2f_optimizer.h  f2f_renderer.cpp  f2f_renderer.h
facelib/gl_utility/: CMakeLists.txt  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  gl_core.cpp  gl_core.h  gl_mesh.cpp  gl_mesh.h  gl_utils.h  glc_camera.cpp  glc_camera.h  sh_utils.cpp  sh_utils.h  xslit_camera.cpp  xslit_camera.h
facelib/module/: CMakeLists.txt  capture_module.cpp  capture_module.h  face_module.cpp  face_module.h  face_renderer.cpp  face_renderer.h  module.h  preprocess_module.cpp  preprocess_module.h  renderer.cpp  renderer.h
facelib/optimizer/: CMakeLists.txt  base_optimizer.cpp  base_optimizer.h  basic_gradient.cpp  basic_gradient.h  constraints.cpp  constraints.h  face_gradient.cpp  face_gradient.h  face_result.h  p2d_optimizer.cpp  p2d_optimizer.h  regularizer.cpp  regularizer.h  sh_optimizer.cpp  sh_optimizer.h
facelib/regressor/: CMakeLists.txt  dem_adaptor.cpp  dem_adaptor.h  fern.cpp  fern.h  model.cpp  model.h  regressor.cpp  regressor.h  train_util.cpp  train_util.h
facelib/renderer/: CMakeLists.txt  DeepLS_renderer.cpp  DeepLS_renderer.h  IBL_renderer.cpp  IBL_renderer.h  LSGeo_renderer.cpp  LSGeo_renderer.h  LS_renderer.cpp  LS_renderer.h  base_renderer.cpp  base_renderer.h  bg_renderer.cpp  bg_renderer.h  differedLS_renderer.cpp  differedLS_renderer.h  glc_renderer.cpp  glc_renderer.h  hairmesh_renderer.cpp  hairmesh_renderer.h  mesh_renderer.cpp  mesh_renderer.h  mp2_renderer.cpp  mp2_renderer.h  mp_renderer.cpp  mp_renderer.h  p2d_renderer.cpp  p2d_renderer.h  p3d_renderer.cpp  p3d_renderer.h  panorama_renderer.cpp  panorama_renderer.h  posmap_renderer.cpp  posmap_renderer.h  prt_renderer.cpp  prt_renderer.h  sphere_renderer.cpp  sphere_renderer.h
facelib/shape_model/: CMakeLists.txt  bilinear_face_model.cpp  face_data.cpp  face_model.h  linear_face_model.cpp  ls_face_model.cpp  mesh_data.cpp  mesh_data.h
facelib/utility/: CMakeLists.txt  EigenHelper.cpp  EigenHelper.h  bbox.cpp  bbox.h  bvh_tree.cpp  bvh_tree.h  capture_data.cpp  capture_data.h  delaunator.h  exr_loader.cpp  exr_loader.h  fps.h  frame_loader.cpp  frame_loader.h  fw_utils.cpp  fw_utils.h  impsamp_data.cpp  impsamp_data.h  mesh_data.cpp  mesh_data.h  obj_loader.cpp  obj_loader.h  openmesh_utilities.cpp  openmesh_utilities.h  prt_data.cpp  prt_data.h  pts_loader.cpp  pts_loader.h  ray.cpp  ray.h  sampler.cpp  sampler.h  sh_basic.cpp  sh_basic.h  str_utils.cpp  str_utils.h  timer.h  trackball.cpp  trackball.h
facelib/utility/LBFGSB/: lbfgsb.h  solver.cpp  solver.h
facelib/utility/hog/: hog.c  hogFeature.cpp  hogFeature.h
miscellany/module-manager/: PinscreenModule.cmake  (+2 more)
shaders/: IBL.frag  IBL.vert  deep_ls.frag  depthmap.frag  depthmap.vert  differed_ls.frag  differed_ls.vert  face2face.frag  face2face.geom  face2face.vert  face2face_preview.frag  face2face_preview.vert  full_texture_bgr.frag  full_texture_bgr.vert  glc.frag  glc.vert  hairmesh.frag  hairmesh.vert  lightstage.frag  lightstage.glsl  lightstage.vert  ls_geo.frag  mesh.frag  mesh.te  mesh.vert  mp2.frag  mp2.vert  mp_init.frag  mp_init.vert  mp_main.frag  mp_main.vert  point2d.frag  point2d.vert  point3d.frag  point3d.vert  pointLight.frag  pointLight.vert  posmap_recon.frag  posmap_recon.tc  posmap_recon.te  (+12 more)
src/: EigenHelper.h  IBL_renderer.cpp  IBL_renderer.h  IBL_renderer.hpp  LS_renderer.cpp  LS_renderer.h  base_renderer.h  bg_renderer.cpp  bg_renderer.h  bilinear_face_model.cpp  camera.cpp  camera.h  camera.hpp  capture_module.cpp  capture_module.h  capture_module.hpp  constraints.cpp  constraints.h  f2f_optimizer.cpp  f2f_optimizer.h  f2f_renderer.cpp  f2f_renderer.h  f2f_renderer.hpp  face_data.cpp  face_gradient.cpp  face_gradient.h  face_model.cpp  face_model.h  face_model.hpp  face_module.cpp  face_module.h  face_module.hpp  face_result.h  frame_loader.cpp  frame_loader.h  framebuffer.cpp  fw_utils.cpp  fw_utils.h  fw_utils.hpp  gl_core.cpp  (+40 more)
utility/TCPStream/: CMakeLists.txt  cv_utils.h  land_stream.h  seg_stream.h  tcp_client.h  tcp_server.cc  tcp_stream.h
utility/face2d-detector/: CMakeLists.txt  face2d_detector.cc  face2d_detector.h
utility/imgui/: CMakeLists.txt
utility/tcpstream/: CMakeLists.txt  cv_utils.cc  param_stream.h  seg_stream.h  tcp_client.cc  tcp_server.h  tcp_stream.cc  tcp_stream.h
(+62 files in other folders)
